--- a/candycrush/build.gradle
+++ b/candycrush/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'be.kuleuven.candycrush'
-    mainClass = 'be.kuleuven.candycrush.HelloApplication'
+    mainClass = 'be.kuleuven.candycrush.CandycrushApplication'
 }
 
 javafx {
@@ -36,6 +36,7 @@ javafx {
 
 dependencies {
     implementation('org.controlsfx:controlsfx:11.1.2')
+    implementation('com.google.code.gson:gson:2.9.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
