--- a/candycrush/build.gradle
+++ b/candycrush/build.gradle
@@ -11,6 +11,9 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    flatDir{
+        dirs("libs")
+    }
 }
 
 ext {
@@ -37,6 +40,8 @@ javafx {
 dependencies {
     implementation('org.controlsfx:controlsfx:11.1.2')
     implementation('com.google.code.gson:gson:2.9.0')
+
+    implementation('be.kuleuven:NeighbourCheckLibrary:1.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
