--- a/candycrush/build.gradle
+++ b/candycrush/build.gradle
@@ -41,10 +41,16 @@ dependencies {
     implementation('org.controlsfx:controlsfx:11.1.2')
     implementation('com.google.code.gson:gson:2.9.0')
 
+
+
     implementation('be.kuleuven:NeighbourCheckLibrary:1.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    testImplementation("org.assertj:assertj-core:3.11.1")
+    testImplementation("org.mockito:mockito-core:5.11.0")
+
 }
 
 test {
