--- a/.github/workflows/gradle_tests.yml
+++ b/.github/workflows/gradle_tests.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: get permission to execute the gradlew file
+      run: chmod +x gradlew
+
     - name: Test with Gradle Wrapper
       run: |
         cd candycrush
